# NiceObjLoader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: 217.mtl  pochelovecheski.mtl  table.mtl  wooden_table.mtl
include/: Camera.hpp  FirstPersonView.hpp  GObject.hpp  GraphicManager.hpp  GraphicPresenter.hpp  Object.hpp  ObjectTransforms.hpp  Properties.hpp  Table.hpp  WindowManager.hpp  WorkManager.hpp  loadShader.hpp  mesh.h  model.h  shader.h  utils.hpp
src/: CMakeLists.txt  Camera.cpp  FirstPersonView.cpp  GObject.cpp  GraphicManager.cpp  Object.cpp  ObjectTransforms.cpp  Properties.cpp  Table.cpp  WindowManager.cpp  WorkManager.cpp  loadShader.cpp  main.cpp  utils.cpp
