cmake_minimum_required(VERSION 3.3)

set(CMAKE_CXX_STANDARD 11)

set(GLSAMPLE_PROJECT_NAME GLSample)

project(${GLSAMPLE_PROJECT_NAME})

set( GLSAMPLE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} CACHE STRING "Output directory")
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${GLSAMPLE_OUTPUT_DIRECTORY}/bin" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/RELEASE" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DEBUG" )

option (glew-cmake_BUILD_SHARED "Build shared libraries" ON)
set(glew-cmake_BUILD_SHARED OFF)
option(glew-cmake_BUILD_SINGLE_CONTEXT "Build the single context glew library" ON)
set(glew-cmake_BUILD_SINGLE_CONTEXT OFF)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/glfw")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/glew")
OPTION( BUILD_SHARED_LIBS
  "Build package with shared libraries."
  ON
)
set(BUILD_SHARED_LIBS OFF)
OPTION( ASSIMP_BUILD_ASSIMP_TOOLS
  "If the supplementary tools for Assimp are built in addition to the library."
  ON
)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
OPTION ( ASSIMP_BUILD_TESTS
  "If the test suite for Assimp is built in addition to the library."
  ON
)
set(ASSIMP_BUILD_TESTS OFF)
OPTION( ASSIMP_INSTALL
  "Disable this if you want to use assimp as a submodule."
  ON
)
set(ASSIMP_INSTALL OFF) 
set(ASSIMP_BUILD_X_IMPORTER OFF)
	set(ASSIMP_BUILD_AMF_IMPORTER OFF)
	set(ASSIMP_BUILD_3DS_IMPORTER OFF)
	set(ASSIMP_BUILD_MD3_IMPORTER OFF)
	set(ASSIMP_BUILD_MDL_IMPORTER OFF)
	set(ASSIMP_BUILD_MD2_IMPORTER OFF)
	set(ASSIMP_BUILD_PLY_IMPORTER OFF)
	set(ASSIMP_BUILD_ASE_IMPORTER OFF)
	set(ASSIMP_BUILD_HMP_IMPORTER OFF)
	set(ASSIMP_BUILD_SMD_IMPORTER OFF)
	set(ASSIMP_BUILD_MDC_IMPORTER OFF)
	set(ASSIMP_BUILD_MD5_IMPORTER OFF)
	set(ASSIMP_BUILD_STL_IMPORTER OFF)
	set(ASSIMP_BUILD_LWO_IMPORTER OFF)
	set(ASSIMP_BUILD_DXF_IMPORTER OFF)
	set(ASSIMP_BUILD_NFF_IMPORTER OFF)
	set(ASSIMP_BUILD_RAW_IMPORTER OFF)
	set(ASSIMP_BUILD_SIB_IMPORTER OFF)
	set(ASSIMP_BUILD_OFF_IMPORTER OFF)
	set(ASSIMP_BUILD_AC_IMPORTER OFF)
	set(ASSIMP_BUILD_BVH_IMPORTER OFF)
	set(ASSIMP_BUILD_IRRMESH_IMPORTER OFF)
	set(ASSIMP_BUILD_IRR_IMPORTER OFF)
	set(ASSIMP_BUILD_Q3D_IMPORTER OFF)
	set(ASSIMP_BUILD_B3D_IMPORTER OFF)
	set(ASSIMP_BUILD_COLLADA_IMPORTER OFF)
	set(ASSIMP_BUILD_TERRAGEN_IMPORTER OFF)
	set(ASSIMP_BUILD_CSM_IMPORTER OFF)
	set(ASSIMP_BUILD_3D_IMPORTER OFF)
	set(ASSIMP_BUILD_LWS_IMPORTER OFF)
	set(ASSIMP_BUILD_OGRE_IMPORTER OFF)
	set(ASSIMP_BUILD_OPENGEX_IMPORTER OFF)
	set(ASSIMP_BUILD_MS3D_IMPORTER OFF)
	set(ASSIMP_BUILD_COB_IMPORTER OFF)
	set(ASSIMP_BUILD_BLEND_IMPORTER OFF)
	set(ASSIMP_BUILD_Q3BSP_IMPORTER OFF)
	set(ASSIMP_BUILD_NDO_IMPORTER OFF)
	set(ASSIMP_BUILD_IFC_IMPORTER OFF)
	set(ASSIMP_BUILD_XGL_IMPORTER OFF)
	set(ASSIMP_BUILD_FBX_IMPORTER OFF)
	set(ASSIMP_BUILD_ASSBIN_IMPORTER OFF)
	set(ASSIMP_BUILD_GLTF_IMPORTER OFF)
	set(ASSIMP_BUILD_GLTF_IMPORTER OFF)
	set(ASSIMP_BUILD_C4D_IMPORTER OFF)
	set(ASSIMP_BUILD_3MF_IMPORTER OFF)
	set(ASSIMP_BUILD_X3D_IMPORTER OFF)
	set(ASSIMP_BUILD_MMD_IMPORTER OFF)
	set(ASSIMP_BUILD_M3D_IMPORTER OFF)
	OPTION( ASSIMP_NO_EXPORT
  "Disable Assimp's export functionality."
  OFF
)
	set(ASSIMP_NO_EXPORT ON)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/assimp")

include_directories(${OPENGL_INCLUDE_DIRS})
find_package(OpenGL REQUIRED)
include_directories("${CMAKE_SOURCE_DIR}/lib/glfw/include")
include_directories("${CMAKE_SOURCE_DIR}/lib/glew/include")
include_directories("${CMAKE_SOURCE_DIR}/lib/glm")
include_directories("${CMAKE_SOURCE_DIR}/lib/assimp/include")

include_directories("${CMAKE_SOURCE_DIR}/lib")
include_directories("${CMAKE_SOURCE_DIR}/include")

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src")